--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my four ripo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <h1>my four ripository</h1> 
    <h2>my four ripository headig tow tag</h2>
+   <img src="banner1.jpg" type="images/png">
 </body>
 </html>
