--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
    <h1>my four ripository</h1> 
    <h2>my four ripository headig tow tag</h2>
    <h6>my six heading</h6>
+   <span>span tag inline tag</span>
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi unde et amet natus dolorem nostrum optio ducimus officiis accusantium repudiandae. Excepturi obcaecati eum quidem, adipisci doloremque aperiam dolorum velit laudantium?</p>
    <img src="banner1.jpg" type="images/png">
 </body>
